fix: highlight color dark mode
https://mask.atlassian.net/browse/FW-1981

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,7 +134,7 @@
     --plyr-control-icon-size: 16px;
     --color-card: white;
     --color-light-warn: 255 122 85;
-    --color-light-highlight: #4c4aa9;
+    --color-light-highlight: #AC9DF6;
     --color-highlight: 172 157 246;
 }
 
